# EasyCalculator

./: CMakeLists.txt  Main.qml  README.md  calculator.cpp  calculator.h  main.cpp
buttons/: EqualSignButton.qml  NumberButton.qml
